<resources>
    <string name="app_name">BrewBuddy</string>
    <string name="title_activity_brew_buddy_map">Brewery Map</string>
    <string name="label_map_button">Brewery Map</string>
    <string name="title_activity_brewery_list">Breweries</string>
    <string name="BrewInfo">___________ New Brew Info: ___________</string>
    <string name="BrewName">Name</string>
    <string name="BrewType">Type</string>
    <string name="ABV">ABV</string>
    <string name="Description">Description</string>
    <string name="Price">Price</string>
    <string name="Availability">Availability</string>
    <string name="BreweryName">Brewery Name</string>
    <string name="BreweryAddress">Address</string>
    <string name="BrewLocationUseCurrent">Use your current location</string>
    <string name="SubmitBrewButton">Add Brew</string>
    <string name="ByTeamDigby">By: Team Digby Apps</string>
    <string name="D1title">Questionnaire</string>
    <string name="Q1title">Please select the best answer from the choices provided...</string>
    <string name="Q1Subtitle">Question 1:</string>
    <string name="Q1">Are you drinking socially OR ARE YOU LOOKING TO GET DRUNK?!?!?!?</string>
    <string name="Q2Subtitle">Question 2:</string>
    <string name="Q2">Are you looking looking for lighter or darker beer styles?</string>
    <string name="Q3Subtitle">Question 3:</string>
    <string name="Q3">Are you looking to pair your beer with food or desert?</string>
    <string name="Q4Subtitle">Question 4:</string>
    <string name="Q4">Please choose from the following food options: </string>
    <string name="FoodOptions1">Lighter Foods (chicken, salads, salmon)</string>
    <string name="FoodOptions2">Lighter Foods (seafood, chicken, cheese)</string>
    <string name="FoodOptions3">Lighter Foods (sushi, seafood, Mexican, Fruit)</string>
    <string name="FoodOptions4">Strong Spicy Foods (burgers, steak, Indian, Thai, carrot cake)</string>
    <string name="FoodOptions5">Strong Spicy Foods (burgers, pizza, sandwiches)</string>
    <string name="FoodOptions6">Strong Foods (beef, port, BBQ, Pound Cake)</string>
    <string name="FoodOptions7">Hearty Foods (pork, grilled salmon, duck, nut-based deserts)</string>
    <string name="FoodOptions8">Roasted or Smoked Foods (BBQ, blackened fish, chocolate)</string>
    <string name="FoodOptions9">Savory Foods or Chocolate Deserts (Fois Gras, Steak, Lamb, Oysters, BBQ Ribs)</string>
    <string name="LighterBrewFlavorOption1">Bitterness: mild, Flavor: mild with a crisp finish</string>
    <string name="LighterBrewFlavorOption2">Bitterness: mild to moderate, Flavor: mild to malt sweetness</string>
    <string name="LighterBrewFlavorOption3">Bitterness: mild, Flavor: fruity and spicy</string>
    <string name="LighterBrewFlavorOption4">Bitterness: moderate to high, Flavor: intense, spicy, earthy or aromatic</string>
    <string name="LighterBrewFlavorOption5">Bitterness: moderate, Flavor: caramel richness</string>
    <string name="DarkerBrewFlavorOption1">Bitterness: moderate, Flavor: malt caramel sweetness</string>
    <string name="DarkerBrewFlavorOption2">Bitterness: mild to moderate, Flavor: malt flavors of caramel, nuts, biscuit and toffee</string>
    <string name="DarkerBrewFlavorOption3">Bitterness: mild to moderate, Flavor: roasted malt flavors with hints of chocolate</string>
    <string name="DarkerBrewFlavorOption4">Bitterness: moderate to high, Flavor: heavily roasted malt flavors with hints of chocolate</string>
    <string name="LighterBrewOption1">Pale Larger/Pilsner</string>
    <string name="LighterBrewOption2">Blonde Ale</string>
    <string name="LighterBrewOption3">Hefeweizen</string>
    <string name="LighterBrewOption4">Pale Ale/IPA</string>
    <string name="LighterBrewOption5">Amber Ale</string>
    <string name="DarkerBrewOption1">Irish Red Ale</string>
    <string name="DarkerBrewOption2">Brown Ale</string>
    <string name="DarkerBrewOption3">Porter</string>
    <string name="DarkerBrewOption4">Stout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lighter">Lighter</string>
    <string name="darker">Darker</string>
    <string name="next">Next</string>
    <string name="ResultTitle">Based on your answers, we suggest a...</string>
    <string name="SearchSuggestedResults">Find Local Options</string>
</resources>
