<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <!--Put form controls here-->
        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BrewInfo"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/EditTextName"
            android:layout_height="wrap_content"
            android:hint="@string/BrewName"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/EditTextType"
            android:layout_height="wrap_content"
            android:hint="@string/BrewType"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/EditTextABV"
            android:layout_height="wrap_content"
            android:hint="@string/ABV"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/EditTextDescription"
            android:layout_height="wrap_content"
            android:hint="@string/Description"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/EditTextBrewery"
            android:layout_height="wrap_content"
            android:hint="@string/BreweryName"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/EditTextPrice"
            android:layout_height="wrap_content"
            android:hint="@string/Price"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/EditTextAvailability"
            android:layout_height="wrap_content"
            android:hint="@string/Availability"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <CheckBox
            android:id="@+id/CheckBoxResponse"
            android:layout_height="wrap_content"
            android:text="@string/BrewLocationUseCurrent"
            android:layout_width="fill_parent">
        </CheckBox>

        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="wrap_content"
            android:text="@string/SubmitBrewButton"
            android:onClick="addBrew"
            android:layout_width="fill_parent">
        </Button>


    </LinearLayout>
</ScrollView>
