<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <!-- title text -->
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/D1title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- subtitle text -->
    <TextView
        android:id="@+id/txtSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/Q4Subtitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- question 1 text -->
    <TextView
        android:id="@+id/txtQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtSubTitle"
        android:layout_marginTop="38dp"
        android:text="@string/Q4"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- radio group to allow for only one radio button selection -->
    <RadioGroup
        android:id="@+id/radioAnswers4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtQ1" >

        <!-- 1st answer radio button-->
        <RadioButton
            android:id="@+id/radioButtonFoodOption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:checked="false"
            android:text="@string/FoodOptions1" />

        <!-- 2nd answer radio button-->
        <RadioButton
            android:id="@+id/radioButtonFoodOption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FoodOptions2" />

        <!-- 3rd answer radio button-->
        <RadioButton
            android:id="@+id/radioButtonFoodOption3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FoodOptions3" />

        <!-- 4th answer radio button-->
        <RadioButton
            android:id="@+id/radioButtonFoodOption4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FoodOptions4" />

        <!-- 5th answer radio button-->
        <RadioButton
            android:id="@+id/radioButtonFoodOption5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FoodOptions5" />

        <!-- 6th answer radio button-->
        <RadioButton
            android:id="@+id/radioButtonFoodOption6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FoodOptions6" />

        <!-- 7th answer radio button-->
        <RadioButton
            android:id="@+id/radioButtonFoodOption7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FoodOptions7" />

        <!-- 8th answer radio button-->
        <RadioButton
            android:id="@+id/radioButtonFoodOption8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FoodOptions8" />

        <!-- 9th answer radio button-->
        <RadioButton
            android:id="@+id/radioButtonFoodOption9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FoodOptions9" />

    </RadioGroup>

    <!-- next button -->
    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/txtTitle"
        android:text="@string/next"
        android:onClick="resultButtonClickFunction"/>
</RelativeLayout>